--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mantine/core": "^4.2.12",
     "@mantine/hooks": "^4.2.12",
     "@mantine/next": "^4.2.12",
+    "@mantine/prism": "^4.2.12",
     "@reduxjs/toolkit": "^1.8.3",
     "next": "12.2.2",
     "react": "18.2.0",
